# VCSMatch---Multimodal-Entity-Resolution

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/datasets/: dataset_split.json
configs/eda/: eda.json  ngram_detection.json
configs/embedding/: text_prompts.json  text_titles.json  vision.json
configs/evaluation/: evaluation.json
configs/grid_search/: grid_search.json
configs/metric_learning/: train.json
configs/retrieval/: retrieval.json
docker/: Dockerfile
scripts/: create_embeddings.sh  evaluate_frozen_embeddings.sh  evaluate_frozen_test.sh  evaluate_metric.sh  evaluate_metric_test.sh  prepare_data.sh  train_metric_heads.sh
src/core/: cosine_similarity.py
src/core/datasets/: dataset_split.py
src/core/embeddings/: faiss_utils.py  loader.py
src/core/evaluation/: metrics.py
src/schemas/datasets/: dataset_split.py
src/schemas/eda/: __init__.py  eda.py  ngram.py
src/schemas/embedding/: text.py  vision.py
src/schemas/evaluation/: evaluation.py
src/schemas/grid_search/: grid_search.py
src/schemas/metric_learning/: metric_learning.py
src/schemas/retrieval/: retrieval.py
src/services/datasets/: dataset_split.py
src/services/eda/: eda_service.py  language_detection.py  ngram_detection.py
src/services/embedding/: text.py  vision.py
src/services/evaluation/: evaluation.py
src/services/grid_search/: grid_search.py
tests/: test_cosine_similarity.py  test_eda.py  test_embedding_text.py  test_embedding_vision.py  test_evaluation.py  test_language_detection.py  test_ngram_detection.py
(+4 files in other folders)
