[project]
name = "vcsmatch-multimodal-entity-resolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "bitsandbytes>=0.49.2",
    "datasets>=5.0.0",
    "faiss-gpu>=1.14.3",
    "lingua-language-detector>=2.1.1",
    "matplotlib>=3.11.0",
    "mlflow>=1.27.0",
    "onnxruntime-gpu>=1.27.0",
    "optimum>=2.2.0",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pytorch-metric-learning>=2.9.0",
    "safetensors>=0.8.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "timm>=1.0.28",
    "torch==2.7.1; sys_platform == 'linux'",
    "torchvision; sys_platform == 'linux'",
    "tqdm>=4.68.4",
    "transformers>=5.13.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.ruff]
line-length = 81
